--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# AI Assistant files
+AGENTS.md
+CLAUDE.md
+CLAUDE/
