fix: add packageManager field for Turborepo 2.7
Turborepo 2.7+ requires packageManager field in root package.json.
Specifies bun@1.3.0 as the package manager.

Fixes 'Missing packageManager field' error when running bun run dev

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "url-util",
   "private": true,
   "type": "module",
+  "packageManager": "bun@1.3.0",
   "workspaces": [
     "packages/*"
   ],
