--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,8 +24,7 @@
     "react-hook-form": "^7.69.0",
     "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.9"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
