fixed location table and api calls for new map location

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -4,6 +4,10 @@ GOOGLE_MAPS_API_KEY=
 # Instagram RapidAPI (optional - media download will be disabled if not set)
 RAPID_API_KEY=
 
+# Geoapify API (optional - Brazil reverse geocoding limited without it)
+# Sign up at https://www.geoapify.com/ (Free tier: 3000 requests/day)
+GEOAPIFY_API_KEY=
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
