--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,9 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run src/server/main.ts",
-    "seed:locations": "bun run src/features/locations/scripts/seed-locations.ts",
-    "test:locations": "bun run src/features/locations/scripts/test-location-utils.ts"
+    "dev": "bun run src/server/main.ts"
   },
   "dependencies": {
     "@url-util/shared": "workspace:*",
