snyc data with payload server - working beta

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -15,3 +15,9 @@ NODE_ENV=development
 # Data paths (optional - uses defaults if not set)
 DB_PATH=packages/server/data/location.sqlite
 IMAGES_PATH=packages/server/data/images
+
+# Payload CMS Integration (optional - sync to Payload disabled if not set)
+# Configure these to enable one-way sync from url-util to Payload CMS
+PAYLOAD_API_URL=http://localhost:4000
+PAYLOAD_SERVICE_EMAIL=service-account@questurian.com
+PAYLOAD_SERVICE_PASSWORD=your-strong-password
